fix(audio): merge audio files